# kora

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  agent_reference.md  asana_report.txt  basecamp_report.txt  docker-compose.yml  kora-spec.docx  mix.exs  monday_report.txt  trello_report.txt  wrike_report.txt
assets/css/: app.css
assets/js/: app.js
assets/js/hooks/: scroll_down.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: kora.ex  kora_web.ex
lib/kora/: agent.ex  agent_supervisor.ex  agents.ex  application.ex  orchestrator.ex  rate_limiter.ex  repo.ex  tools.ex
lib/kora/agents/: agent.ex
lib/kora/cost_ledger/: cost_entry.ex
lib/kora/llm/: open_router.ex
lib/kora/messages/: message.ex
lib/kora/sessions/: session.ex
lib/kora/tool_results/: tool_result.ex
lib/kora/tools/: definitions.ex
lib/kora/workflows/: workflow.ex
lib/kora_web/: endpoint.ex  router.ex  telemetry.ex
lib/kora_web/components/: core_components.ex  layouts.ex
lib/kora_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20260306192729_create_core_tables.exs  20260307185421_add_call_id_to_tool_results.exs  20260307190735_add_tool_call_id_and_tool_name_to_messages.exs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
test/: test_helper.exs
test/kora/: agent_integration_test.exs  orchestrator_test.exs
test/kora_web/controllers/: error_html_test.exs  error_json_test.exs
test/support/: conn_case.ex  data_case.ex  llm_mock.ex
(+6 files in other folders)
